rewrite everything using knockout.js because the previous version was relying too much on how browsers work with contenteditable and that was in return very buggy

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,125 +1,156 @@
 body {
-	font: 16px/1.2 BlinkMacSystemFont, -apple-system, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
-	padding: 0;
-	margin: 0;
+    font: 16px/1.2 BlinkMacSystemFont, -apple-system, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 .sticky {
-	position: -webkit-sticky;
-	position: -moz-sticky;
-	position: -ms-sticky;
-	position: sticky;
+    position:         sticky;
+    position:     -ms-sticky;
+    position:    -moz-sticky;
+    position: -webkit-sticky;
 }
 .editing .sticky {
-	position: fixed;
+    position: fixed;
 }
 .template {
-	display: none;
+    display: none;
 }
 
 #header {
     background: #6a39ff;
+    line-height: 40px;
     overflow: hidden;
-	padding: 20px 10px;
-	line-height: 40px;
+    padding: 20px 10px;
 }
 h1 {
-    margin: 0;
     color: #ffd4c4;
-	text-transform: capitalize;
-	text-align: center;
-	float: left;
+    float: left;
+    margin: 0;
+    text-align: center;
+    text-transform: capitalize;
 }
 #add-day {
-	float: right;
     background-color: rgba(255,255,255,.5);
     border-radius: 50%;
     color: #6a39ff;
+    float: right;
     font-size: 24px;
     height: 30px;
     line-height: 26px;
-    width: 30px;
-    text-align: center;
     margin-top: 5px;
+    text-align: center;
+    width: 30px;
 }
 
 
 .panel {
-	padding: 0 10px 10px;
+    padding: 0 10px 10px;
 }
 
 
 .day {
-	margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 
 .day-top {
-	top: 0;
-	background-color: #fff;
-	z-index: 10;
+    background-color: #fff;
+    top: 0;
+    z-index: 10;
 }
 .day-top h2 {
-	margin: 0;
-	padding: 10px 0;
-	font-size: 1.2em;
+    font-size: 1.2em;
+    margin: 0;
+    padding: 10px 0;
 }
 .day-head {
-	font-size: 1em;
-	border-top: 1px solid #dedede;
-	font-weight: bold;
+    border-top: 1px solid #dedede;
+    font-size: 1em;
+    font-weight: bold;
 }
 
 .day-row {
-	display: flex;
-	border-left: 1px solid #dedede;
+    border-left: 1px solid #dedede;
+    display: flex;
 }
 .day-row:nth-child(even) {
-	background-color: #f7f7f7;
+    background-color: #f7f7f7;
 }
 .day-cell {
-	height: 20px;
-	line-height: 20px;
-	padding: 5px 0;
-	border-right: 1px solid #dedede;
-	border-bottom: 1px solid #dedede;
-	text-align: center;
-	font-size: 16px;
+    border-bottom: 1px solid #dedede;
+    border-right: 1px solid #dedede;
+    height: 30px;
+    line-height: 30px;
+    position: relative;
+    text-align: center;
+}
+.day-cell .number {
+    background-color: transparent;
+    border: 0 none;
+    box-sizing: border-box;
+    font-size: 16px;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 5px;
+    text-align: center;
+    width: 100%;
+}
+
+.day-cell .checkbox {
+    -webkit-appearance: none;
+    height: 30px;
+    margin: 0;
+    opacity: 0;
+    width: 100%;
+}
+.day-cell .checkbox + span {
+    height: 30px;
+    left: 0;
+    line-height: 30px;
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    text-align: center;
+}
+.day-cell .checkbox:checked + span {
+    opacity: 1;
 }
 
 .day-cell--time,
 .day-cell--pipi,
 .day-cell--caca {
-	flex: 0 0 auto;
-	font-size: 16px;
-	width: 40px;
+    flex: 0 0 auto;
+    font-size: 16px;
+    width: 40px;
 }
 
 .day-row:not(.day-head) .day-cell--time {
-	font-size: 12px;
+    font-size: 12px;
 }
 .day-cell--pumped,
 .day-cell--fed,
 .day-cell--formula {
-	flex: 1 1 auto;
-	width: calc(33vw); //47 is one third of all borders' width, body padding and fixed cells' width
+    flex: 1 1 auto;
+    width: calc(33vw); /*47 is one third of all borders' width, body padding and fixed cells' width*/
 }
 
 .day-cell--pipi.js-toggle-visible:after {
-	content: "💧";
+    content: '💧';
 }
 .day-cell--caca.js-toggle-visible:after {
-	content: "💩";
+    content: '💩';
 }
 
 
 
 .day-stats {
-	/* display: flex; */
-	/* justify-content: space-between; */
-	padding-top: 10px;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    padding-top: 10px;
 }
 .day-stats--row {
-	margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 .day-stats__editable {
     border-bottom: 1px solid;
@@ -127,10 +158,10 @@ h1 {
     height: 20px;
     line-height: 20px;
     overflow: hidden;
+    padding: 0 5px;
     text-align: right;
     vertical-align: top;
     white-space: nowrap;
-    padding: 0 5px;
 }
 .weight {
     min-width: 40px;
@@ -139,12 +170,12 @@ h1 {
 JS
 .*****************************************************************************/
 .js-toggle-visible {
-	cursor: pointer;
+    cursor: pointer;
 }
 .js-toggle-visible:after {
-	display: block;
-	opacity: 0;
+    display: block;
+    opacity: 0;
 }
 .is-visible:after {
-	opacity: 1;
+    opacity: 1;
 }
